[gd_scene load_steps=3 format=2]

[ext_resource path="res://PlayerProjectile.gd" type="Script" id=1]
[ext_resource path="res://Adventurer/Screen Shot 2022-03-03 at 11.55.46 AM.png" type="Texture" id=2]

[node name="PlayerProjectile" type="Area2D"]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 1 )

[node name="Slash" type="Sprite" parent="."]
position = Vector2( 7.10543e-15, 1.19209e-07 )
scale = Vector2( 0.059, 0.014 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2( 0.295, 0.076 )
polygon = PoolVector2Array( -36, -73, 24, -81, 52, -68, 71, -48, 80, -24, 79, 7, 65, 33, 48, 50, 29, 59, -8, 62, -23, 54, -2, 44, 16, 27, 22, 12, 25, -10, 21, -28, 3, -52, -19, -59, -42, -60, -37, -71 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, 1 )
scale = Vector2( 0.5, 1.125 )

[connection signal="area_entered" from="." to="." method="_on_PlayerProjectile_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_PlayerProjectile_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
